--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "@binaris/shift-fetch-runtime": "0.0.3",
     "@binaris/shift-local-proxy": "0.0.8",
     "bootstrap": "^4.3.1",
+    "front-matter": "^3.0.2",
+    "github-markdown-css": "^3.0.1",
+    "install": "^0.13.0",
+    "marked": "^0.7.0",
+    "npm": "^6.10.3",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "react-sidebar": "^3.0.2",
+    "scroll-to-element": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
