--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "github-markdown-css": "^3.0.1",
     "install": "^0.13.0",
     "marked": "^0.7.0",
+    "node-sass": "^4.12.0",
     "npm": "^6.10.3",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.11",
@@ -20,6 +21,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-sidebar": "^3.0.2",
+    "sanitize.css": "^11.0.0",
     "scroll-to-element": "^2.0.3"
   },
   "scripts": {
