--- a/package.json
+++ b/package.json
@@ -1,28 +1,47 @@
 {
-  "name": "shiftjs-template-template",
-  "version": "0.1.3",
+  "name": "reshuffle-dev-docs-site",
+  "author": "Ryland Goldstein",
+  "version": "0.1.1",
   "private": true,
   "license": "MIT",
+  "keywords": [
+    "javascript",
+    "react",
+    "create-react-app",
+    "fullstack",
+    "bootstrap",
+    "backend",
+    "markdown",
+    "prism",
+    "remark",
+    "rehype",
+    "reactjs"
+  ],
   "dependencies": {
     "@binaris/shift-code-transform": "0.0.2",
     "@binaris/shift-db": "^0.3.0",
     "@binaris/shift-fetch-runtime": "0.0.3",
     "@binaris/shift-local-proxy": "0.0.8",
     "bootstrap": "^4.3.1",
+    "font-awesome": "^4.7.0",
     "front-matter": "^3.0.2",
     "github-markdown-css": "^3.0.1",
-    "install": "^0.13.0",
-    "marked": "^0.7.0",
+    "glob": "^7.1.4",
     "node-sass": "^4.12.0",
-    "npm": "^6.10.3",
+    "prismjs": "^1.17.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-sidebar": "^3.0.2",
+    "rehype-autolink-headings": "^2.0.5",
+    "rehype-slug": "^2.0.3",
+    "rehype-stringify": "^6.0.0",
+    "remark-parse": "^7.0.1",
+    "remark-rehype": "^5.0.0",
     "sanitize.css": "^11.0.0",
-    "scroll-to-element": "^2.0.3"
+    "unified": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
