--- a/package.json
+++ b/package.json
@@ -23,18 +23,25 @@
     "@binaris/shift-fetch-runtime": "0.0.3",
     "@binaris/shift-local-proxy": "0.0.8",
     "bootstrap": "^4.3.1",
+    "dotenv": "^8.1.0",
     "font-awesome": "^4.7.0",
     "front-matter": "^3.0.2",
     "github-markdown-css": "^3.0.1",
     "glob": "^7.1.4",
+    "google-auth-library": "^5.2.0",
+    "html-to-react": "^1.4.1",
+    "jsonwebtoken": "^8.5.1",
     "node-sass": "^4.12.0",
     "prismjs": "^1.17.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.8.6",
+    "react-google-button": "^0.5.3",
+    "react-google-login": "^5.0.5",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-sidebar": "^3.0.2",
+    "react-spinners": "^0.6.1",
     "rehype-autolink-headings": "^2.0.5",
     "rehype-slug": "^2.0.3",
     "rehype-stringify": "^6.0.0",
