--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-scripts": "3.0.1",
     "react-sidebar": "^3.0.2",
     "rehype-autolink-headings": "^2.0.5",
+    "rehype-raw": "^4.0.1",
     "rehype-slug": "^2.0.3",
     "rehype-stringify": "^6.0.0",
     "remark-parse": "^7.0.1",
