--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "front-matter": "^3.0.2",
     "google-auth-library": "^5.2.0",
     "html-to-react": "^1.4.1",
+    "is-url-external": "^1.0.3",
     "jsonwebtoken": "^8.5.1",
     "node-sass": "^4.12.0",
     "prismjs": "^1.17.1",
