--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "html-to-react": "^1.4.1",
     "is-url-external": "^1.0.3",
     "jsonwebtoken": "^8.5.1",
+    "lodash.get": "^4.4.2",
     "node-sass": "^4.12.0",
     "prismjs": "^1.17.1",
     "react": "^16.8.6",
