add identity to devsite

--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "reactjs"
   ],
   "dependencies": {
-    "@reshuffle/code-transform": "0.0.3",
-    "@reshuffle/db": "^0.5.3",
-    "@reshuffle/fetch-runtime": "0.0.5",
-    "@reshuffle/local-proxy": "^0.2.11",
-    "@reshuffle/server-function": "0.0.6",
+    "@reshuffle/code-transform": "^0.1.0",
+    "@reshuffle/db": "^0.5.5",
+    "@reshuffle/fetch-runtime": "^0.1.0",
+    "@reshuffle/local-proxy": "^0.3.4",
+    "@reshuffle/passport": "^0.2.0",
+    "@reshuffle/react-auth": "^0.1.7",
+    "@reshuffle/server-function": "^0.2.2",
     "bootstrap": "^4.3.1",
     "dotenv": "^8.1.0",
     "font-awesome": "^4.7.0",
@@ -31,6 +33,7 @@
     "html-to-react": "^1.4.1",
     "is-url-external": "^1.0.3",
     "jsonwebtoken": "^8.5.1",
+    "lodash.get": "^4.4.2",
     "node-sass": "^4.12.0",
     "prismjs": "^1.17.1",
     "react": "^16.8.6",
@@ -39,7 +42,7 @@
     "react-ga": "^2.6.0",
     "react-google-login": "^5.0.5",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.3.0",
     "react-sidebar": "^3.0.2",
     "rehype-autolink-headings": "^2.0.5",
     "rehype-raw": "^4.0.1",
