--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@reshuffle/react-auth": "^0.1.7",
     "@reshuffle/server-function": "^0.2.2",
     "bootstrap": "^4.3.1",
+    "clipboard": "^2.0.4",
     "dotenv": "^8.1.0",
     "font-awesome": "^4.7.0",
     "front-matter": "^3.0.2",
